--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Barberia Alura</title>
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="style-home.css">
 </head>
 <body>
     <div>
        <header>     
             <h1 class="tituloPrincipal" > Barberia Alura </h1>
-    </header>
+        </header>
     </div>
 
     <img src="img/banner.jpg" id="banner" alt="">
