--- a/productos.html
+++ b/productos.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Productos - Barberia alura</title>
     <link rel="stylesheet" href="reset.css">
-    <link rel="stylesheet" href="productos.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 
 <body>
@@ -16,7 +16,7 @@
                 <ul >
                     <li><a href="index.html">Home</a></li>
                     <li><a href="productos.html">Productos</a></li>
-                    <li><a href="">Contacto</a></li>
+                    <li><a href="contacto.html">Contacto</a></li>
                 </ul>
             </nav>
         </div>
